--- a/backend/chatbot.html
+++ b/backend/chatbot.html
@@ -381,7 +381,7 @@
             }
 
             try {
-                fetch('http://localhost:5000/', {
+                fetch('/embed', {
                 method: "POST",
                 body: JSON.stringify(payload),
                 headers: {
@@ -562,7 +562,7 @@
         
 
         const getClientList = async() => {
-            const response = await fetch("http://localhost:5000/client-list");
+            const response = await fetch("/client-list");
             const { clients } = await response.json();
 
             clients.forEach(client => {
