--- a/backend/embed.html
+++ b/backend/embed.html
@@ -69,7 +69,7 @@
             if(this.type.value && this.embedText.value) {
                 statusMsg.textContent = "Embedding..."
                 try {
-                    const response = await fetch("http://localhost:5000/embed", {
+                    const response = await fetch("/embed", {
                         method: "POST",
                         body: JSON.stringify({
                             client: this.client.value,
