notr dame preview

--- a/backend/chatbot.html
+++ b/backend/chatbot.html
@@ -259,7 +259,7 @@
         <select name="client-list" id="client-list">
         </select>
     </div> -->
-    <iframe src="https://venturabd.com" frameborder="0" style="width: 100%; height: calc(100dvh - 20px);"></iframe>
+    <iframe src="https://ndub.edu.bd/academics/programs/undergraduate-programs/bachelor-of-science-in-computer-science-engineering-cse/" frameborder="0" style="width: 100%; height: calc(100dvh - 20px);"></iframe>
     <div id="chatbot-btn">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
             stroke="currentColor">
@@ -305,7 +305,7 @@
         </div>
     </div>
     <script>
-        let selectedClient = "Ventura";
+        let selectedClient = "NotreDame";
         const conversations = document.querySelector("#cb-conversations");
         const minimizeBtn = document.querySelector("#cb-minimize-btn");
         const form = document.querySelector("#cb-query-form");
